--- a/.php-cs-fixer.php.dist
+++ b/.php-cs-fixer.php.dist
@@ -6,7 +6,7 @@ return PhpCsFixer\Config::create()
     ->setRules([
         '@Symfony' => true,
         '@PSR2' => true,
-        'class_attributes_separation' => ['elements' => ['const', 'method', 'property']],
+        'class_attributes_separation' => ['elements' => ['const' => 'one', 'method' => 'one', 'property' => 'one']],
         // 'strict_param' => true,
         'array_syntax' => ['syntax' => 'short'],
     ])
